--- a/signin.html
+++ b/signin.html
@@ -17,7 +17,7 @@
 		<title>Biddify | Sing in</title>
 	</head>
 
-	<body class="dark:bg-gray-900">
+	<body class="dark:bg-[#050506]">
 		<script type="module" src="/main.js"></script>
 		<header>
 			<nav
@@ -48,13 +48,13 @@
 		<main id="main">
 			<section
 				id="sign-in"
-				class="bg-gray-50 dark:bg-gray-900 pt-20 sm:pt-0 pb-5 sm:pb-0"
+				class="pt-20 sm:pt-0 pb-5 sm:pb-0"
 			>
 				<div
-					class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0"
+					class="flex flex-col items-center justify-center px-6 pt-8 mx-auto md:h-screen lg:py-0"
 				>
 					<div
-						class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700"
+						class="w-full rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700"
 					>
 						<div class="p-6 space-y-4 md:space-y-6 sm:p-8">
 							<h1
