--- a/signup.html
+++ b/signup.html
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Biddify | Sing up </title>
 	</head>
-	<body class="dark:bg-gray-900">
+	<body class="dark:bg-[#050506]">
 		<script type="module" src="/main.js"></script>
 		<header>
 			<nav
@@ -42,7 +42,7 @@
 		<main>
 			<section
 				id="sign-in"
-				class="bg-gray-50 dark:bg-gray-900 pt-20 sm:pt-10 pb-5 sm:pb-0"
+				class="pt-20 sm:pt-10 pb-5 sm:pb-0"
 			>
 				<div
 					class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0"
