--- a/profile.html
+++ b/profile.html
@@ -14,8 +14,10 @@
 	</head>
 	<body>
 		<script type="module" src="/main.js"></script>
-		<header>
-			<nav class="bg-gradient-to-b from-[#0511F2] to-[#030A8C]">
+		<header id="header">
+			<nav
+				class="bg-gradient-to-b from-[#33333F] to-[#010101] fixed top-0 left-0 right-0 z-10"
+			>
 				<div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
 					<div class="relative flex h-16 items-center justify-between">
 						<div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
@@ -66,16 +68,20 @@
 							class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-between"
 						>
 							<div class="flex flex-shrink-0 items-center">
-								<img
-									class="block w-auto lg:hidden"
-									src="/img/logoSmall.png"
-									alt="Your Company"
-								/>
-								<img
-									class="hidden w-auto lg:block"
-									src="/img/logoSmall.png"
-									alt="Your Company"
-								/>
+								<a href="/index.html">
+									<img
+										class="block w-auto lg:hidden"
+										src="/img/logoSmall.png"
+										alt="Your Company"
+									/>
+								</a>
+								<a href="/index.html">
+									<img
+										class="hidden w-auto lg:block"
+										src="/img/logoSmall.png"
+										alt="Your Company"
+									/>
+								</a>
 							</div>
 							<!-- SEARCH -->
 							<form class="hidden sm:block">
@@ -113,9 +119,7 @@
 									/>
 								</div>
 							</form>
-							<div
-								class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0"
-							>
+							<div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
 								<div class="flex">
 									<p class="text-white">100</p>
 									<p class="text-[#F2AE2E] font-medium">CR</p>
@@ -148,7 +152,7 @@
 										tabindex="-1"
 									>
 										<a
-											href="#"
+											href="/profile.html"
 											class="block px-4 py-2 text-sm text-gray-700"
 											role="menuitem"
 											tabindex="-1"
@@ -180,14 +184,14 @@
 					<div class="sm:hidden" id="mobile-menu">
 						<div class="space-y-1 px-2 pt-2 pb-3">
 							<a
-								href="#"
+								href="/index.html"
 								class="text-gray-300 font-body hover:text-medium hover:text-white block px-3 py-2 rounded-md text-base font-medium"
 								aria-current="page"
 								>Home</a
 							>
 
 							<a
-								href="#"
+								href="/listings.html"
 								class="text-gray-300 hover:text-medium hover:text-white block px-3 py-2 rounded-md text-base font-medium"
 								>Auctions</a
 							>
@@ -199,7 +203,7 @@
 							>
 
 							<a
-								href="#"
+								href="/profile.html"
 								class="text-gray-300 hover:text-medium hover:text-white block px-3 py-2 rounded-md text-base font-medium"
 								>Profile</a
 							>
@@ -241,101 +245,244 @@
 							</div>
 						</form>
 					</div>
-					<div class="hidden sm:ml-6 sm:block">
-						<div class="flex space-x-4">
-							<a
-								href="#"
-								class="text-white px-3 py-2 rounded-md text-sm font-medium"
-								aria-current="page"
-								>Home</a
-							>
+				</div>
+				<div class="hidden sm:pl-6 sm:block bg-[#A77619]">
+					<div class="flex space-x-4">
+						<a
+							href="/index.html"
+							class="text-white px-3 py-2 rounded-md text-sm font-medium"
+							aria-current="page"
+							>Home</a
+						>
 
-							<a
-								href="#"
-								class="text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-medium"
-								>Auctions</a
-							>
+						<a
+							href="/listings.html"
+							class="text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-medium"
+							>Auctions</a
+						>
 
-							<a
-								href="#"
-								class="text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-medium"
-								>Active Auctions</a
-							>
+						<a
+							href="/listings.html"
+							class="text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-medium"
+							>Active Auctions</a
+						>
 
-							<a
-								href="#"
-								class="text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-medium"
-								>Profile</a
-							>
-						</div>
+						<a
+							href="/profile.html"
+							class="text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-medium"
+							>Profile</a
+						>
 					</div>
 				</div>
 			</nav>
 		</header>
-		<main></main>
+		<main class="pt-20 bg-[#f5f5f7]">
+			<div class=" flex flex-wrap items-center justify-center">
+				<div class="container max-w-lg rounded bg-gray-800 shadow-lg transform duration-200 easy-in-out m-12">
+					<div class="h-2/4 sm:h-64 overflow-hidden">
+						<img class="w-full rounded-t"
+							src="https://images.unsplash.com/photo-1638803040283-7a5ffd48dad5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80"
+							alt="Photo by aldi sigun on Unsplash" />
+    				</div>
+					<div class="flex justify-start px-5 -mt-12 mb-5">
+						<span clspanss="block relative h-32 w-32">
+							<img
+								alt="Photo by aldi sigun on Unsplash"
+								src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
+								class="mx-auto object-cover rounded-full h-24 w-24 bg-[#F2AE2E] p-1"
+							/>
+							
+						</span>
+						<button class="relative px-0 left-6">
+								<p class="bg-[#F2AE2E] rounded-md font-body text-xs text-black p-3">Edit Avatar</p>
+						</button>
+					</div>
+					<div class="Profile-details">
+						<div class="px-7 mb-8">
+							<h2 class="text-3xl font-h1 dark:text-gray-300">
+								Sandra
+							</h2>
+							<p class="mt-2 font-h2 text-[#F2AE2E]">1300CR</p>
+							<p class="mt-2 font-body text-gray-600 dark:text-gray-300">
+								Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+								Asperiores molestiae vitae odio non commodi itaque quisquam
+								incidunt doloribus fugit nesciunt.
+							</p>
+							<div class="justify-center px-4 py-2 cursor-pointer max-w-min mx-auto mt-8 rounded-lg text-gray-300 bg-gray-700 ">
+								bethgreene@gmail.com
+							</div>
+						</div>
+					</div>
+				</div>
+				<div id="listings" class="w-full">
+					<div id="active-listings" >
+						<div class="flex bg-gradient-to-b from-[#33333F] to-[#010101] cursor-pointer text-left relative p-10">	
+							<p class="text-[#F2AE2E] font-h2" style="font-weight: 300;">ACTIVE LISTINGS</p>
+							<div class="self-center transform transition-transform -rotate-180  box-chevron">
+								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" viewBox="0 0 16 16">
+									<path stroke="#F2AE2E" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M2.5 5.5L8 11l5.5-5.5"></path>
+								</svg>
+							</div>
+						</div>
+					</div>
+					<div id="subtext" class="overflow-hidden h-0" style="height: auto; justify-content: center; transition: height var(--f-expansion-duration, 0.3s); backface-visibility: hidden;">
+						<div class=" group pt-0">
+							<div id="list-items" class="p-8 max-w-screen-lg mx-auto z-0 flex flex-wrap md:justify-center md:p-2">	
+								<!-- flex-nowrap md:flex-grow justify-center lg:justify-start -->	
+								<a href="/detail.html" class="p-5 md:p-2">
+									<div class="max-w-xs rounded-md shadow-lg hover:scale-105 transition duration-500 cursor-pointer">
+										<div>
+											<img
+												src="https://media.ldlc.com/r1600/ld/products/00/05/82/02/LD0005820208_1.jpg"
+												alt=""
+											/>
+										</div>
+										<div class="py-4 px-4 bg-white">
+											<h2 class="text-lg font-semibold text-gray-600">
+												2020 BMW 3 SERIES
+											</h2>
+										</div>
+									</div>
+								</a>
+								<a href="/detail.html" class="p-5 md:p-2">
+									<div class="max-w-xs rounded-md shadow-lg hover:scale-105 transition duration-500 cursor-pointer">
+										<div>
+											<img
+												src="https://media.ldlc.com/r1600/ld/products/00/05/82/02/LD0005820208_1.jpg"
+												alt=""
+											/>
+										</div>
+										<div class="py-4 px-4 bg-white">
+											<h2 class="text-lg font-semibold text-gray-600">
+												2020 BMW 3 SERIES
+											</h2>
+										</div>
+									</div>
+								</a>
+								<a href="/detail.html" class="p-5 md:p-2">
+									<div class="max-w-xs rounded-md shadow-lg hover:scale-105 transition duration-500 cursor-pointer">
+										<div>
+											<img
+												src="https://media.ldlc.com/r1600/ld/products/00/05/82/02/LD0005820208_1.jpg"
+												alt=""
+											/>
+										</div>
+										<div class="py-4 px-4 bg-white">
+											<h2 class="text-lg font-semibold text-gray-600">
+												2020 BMW 3 SERIES
+											</h2>
+										</div>
+									</div>
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div id="sold-listings" class="w-full">
+					<div id="active-listings" >
+						<div class="flex bg-gradient-to-b from-[#33333F] to-[#010101] cursor-pointer text-left relative p-10">	
+							<p class="text-[#F2AE2E] font-h2" style="font-weight: 300;">SOLD LISTINGS</p>
+							<div class="self-center transform transition-transform -rotate-180  box-chevron">
+								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" viewBox="0 0 16 16">
+									<path stroke="#F2AE2E" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M2.5 5.5L8 11l5.5-5.5"></path>
+								</svg>
+							</div>
+						</div>
+					</div>
+					<div id="subtext" class="overflow-hidden h-0" style="height: auto; justify-content: center; transition: height var(--f-expansion-duration, 0.3s); backface-visibility: hidden;">
+						<div class=" group pt-0">
+							<div id="list-items" class="p-8 max-w-screen-lg mx-auto z-0 flex flex-wrap md:justify-center md:p-2">	
+								<!-- flex-nowrap md:flex-grow justify-center lg:justify-start -->	
+								<a href="/detail.html" class="p-5 md:p-2">
+									<div class="max-w-xs rounded-md shadow-lg hover:scale-105 transition duration-500 cursor-pointer">
+										<div>
+											<img
+												src="https://media.ldlc.com/r1600/ld/products/00/05/82/02/LD0005820208_1.jpg"
+												alt=""
+											/>
+										</div>
+										<div class="py-4 px-4 bg-white">
+											<h2 class="text-lg font-semibold text-gray-600">
+												2020 BMW 3 SERIES
+											</h2>
+										</div>
+									</div>
+								</a>
+								<a href="/detail.html" class="p-5 md:p-2">
+									<div class="max-w-xs rounded-md shadow-lg hover:scale-105 transition duration-500 cursor-pointer">
+										<div>
+											<img
+												src="https://media.ldlc.com/r1600/ld/products/00/05/82/02/LD0005820208_1.jpg"
+												alt=""
+											/>
+										</div>
+										<div class="py-4 px-4 bg-white">
+											<h2 class="text-lg font-semibold text-gray-600">
+												2020 BMW 3 SERIES
+											</h2>
+										</div>
+									</div>
+								</a>
+								<a href="/detail.html" class="p-5 md:p-2">
+									<div class="max-w-xs rounded-md shadow-lg hover:scale-105 transition duration-500 cursor-pointer">
+										<div>
+											<img
+												src="https://media.ldlc.com/r1600/ld/products/00/05/82/02/LD0005820208_1.jpg"
+												alt=""
+											/>
+										</div>
+										<div class="py-4 px-4 bg-white">
+											<h2 class="text-lg font-semibold text-gray-600">
+												2020 BMW 3 SERIES
+											</h2>
+										</div>
+									</div>
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>	
+		</main>
 		<footer class="p-4 sm:p-6" style="background-image: url(/img/footer.png)">
 			<div class="md:flex md:justify-between">
 				<div class="mb-6 md:mb-0">
 					<a href="/index.html" class="flex items-center">
-						<img
-							src="/img/logoSmall.png"
-							class="mr-3 "
-							alt="FlowBite Logo"
-						/>
+						<img src="/img/logoSmall.png" class="mr-3" alt="FlowBite Logo" />
 					</a>
 				</div>
 				<div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-3">
 					<div>
-						<h2
-							class="mb-6 text-sm font-h2 text-[#F2AE2E] uppercase"
-						>
+						<h2 class="mb-6 text-sm font-h2 text-[#F2AE2E] uppercase">
 							help center
 						</h2>
 						<ul class="text-white font-body text-sm">
 							<li class="mb-4">
-								<a href="/" class="hover:underline"
-									>Twitter</a
-								>
+								<a href="/" class="hover:underline">Twitter</a>
 							</li>
 							<li class="mb-4">
-								<a href="/" class="hover:underline"
-									>Facebook</a
-								>
+								<a href="/" class="hover:underline">Facebook</a>
 							</li>
-              <li>
-								<a href="/" class="hover:underline"
-									>Contact us</a
-								>
+							<li>
+								<a href="/" class="hover:underline">Contact us</a>
 							</li>
 						</ul>
 					</div>
 					<div>
-						<h2
-							class="mb-6 text-sm font-h2 text-[#F2AE2E] uppercase"
-						>
+						<h2 class="mb-6 text-sm font-h2 text-[#F2AE2E] uppercase">
 							download
 						</h2>
 						<ul class="text-white font-body text-sm">
 							<li class="mb-4">
-								<a
-									href="/"
-									class="hover:underline"
-									>Ios</a
-								>
+								<a href="/" class="hover:underline">Ios</a>
 							</li>
 							<li>
-								<a href="/" class="hover:underline"
-									>Android</a
-								>
+								<a href="/" class="hover:underline">Android</a>
 							</li>
 						</ul>
 					</div>
 					<div>
-						<h2
-							class="mb-6 text-sm font-h2 text-[#F2AE2E] uppercase"
-						>
-							Legal
-						</h2>
+						<h2 class="mb-6 text-sm font-h2 text-[#F2AE2E] uppercase">Legal</h2>
 						<ul class="text-white font-body text-sm">
 							<li class="mb-4">
 								<a href="#" class="hover:underline">Privacy Policy</a>
@@ -347,9 +494,7 @@
 					</div>
 				</div>
 			</div>
-			<hr
-				class="my-6 border-white sm:mx-auto lg:my-8"
-			/>
+			<hr class="my-6 border-white sm:mx-auto lg:my-8" />
 			<div class="sm:flex sm:items-center sm:justify-between">
 				<span class="text-sm text-gray-500 sm:text-center dark:text-gray-400"
 					>© 2022
@@ -357,10 +502,7 @@
 					All Rights Reserved.
 				</span>
 				<div class="flex mt-4 space-x-6 sm:justify-center sm:mt-0">
-					<a
-						href="#"
-						class="text-white dark:hover:text-gray-500"
-					>
+					<a href="#" class="text-white dark:hover:text-gray-500">
 						<svg
 							class="w-5 h-5"
 							fill="currentColor"
@@ -375,10 +517,7 @@
 						</svg>
 						<span class="sr-only">Facebook page</span>
 					</a>
-					<a
-						href="#"
-						class="text-white dark:hover:text-gray-500"
-					>
+					<a href="#" class="text-white dark:hover:text-gray-500">
 						<svg
 							class="w-5 h-5"
 							fill="currentColor"
@@ -393,10 +532,7 @@
 						</svg>
 						<span class="sr-only">Instagram page</span>
 					</a>
-					<a
-						href="#"
-						class="text-white dark:hover:text-gray-500"
-					>
+					<a href="#" class="text-white dark:hover:text-gray-500">
 						<svg
 							class="w-5 h-5"
 							fill="currentColor"
@@ -409,10 +545,7 @@
 						</svg>
 						<span class="sr-only">Twitter page</span>
 					</a>
-					<a
-						href="#"
-						class="text-white dark:hover:text-gray-500"
-					>
+					<a href="#" class="text-white dark:hover:text-gray-500">
 						<svg
 							class="w-5 h-5"
 							fill="currentColor"
@@ -427,10 +560,7 @@
 						</svg>
 						<span class="sr-only">GitHub account</span>
 					</a>
-					<a
-						href="#"
-						class="text-white dark:hover:text-gray-500"
-					>
+					<a href="#" class="text-white dark:hover:text-gray-500">
 						<svg
 							class="w-5 h-5"
 							fill="currentColor"
