add validation to sign in and up, get listings to homepage

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 		<title>Biddify | Number on auction site</title>
 	</head>
 	<body class="bg-[#E3E4EF]">
-		<script type="module" src="/main.js"></script>
+		<script type="module" src='/main.js'></script>
+		<script type="module" src='/js/getPost.js'></script>
 		<header id="header">
 			<nav
 				class="bg-gradient-to-b from-[#33333F] to-[#010101] fixed top-0 left-0 right-0 z-10"
@@ -283,60 +284,6 @@
 			</nav>
 		</header>
 		<main>
-			<!-- <section id="hero">
-				<div
-					class="max-w-screen-lg md:bg-contain lg:bg-cover md:max-h-screen mt-20 md:mt-36 my-10 px-4 py-7 mx-auto lg:gap-8 xl:gap-0 lg:py-16"
-					style="background-image: url(/img/heroimg.png)"
-				>
-					<div class="mr-auto place-self-center">
-						<h1 class="max-w-2xl text-3xl font-h1 leading-none text-white">
-							Auction up your items today!
-						</h1>
-						<p class="mb-6 leading-normal text-white">
-							over <span class="text-[#F2AE2E]">3 millions</span> used,wholesale
-							and reperiable items sold pr year
-						</p>
-
-						<div class="flex flex-col sm:flex-row mb-10">
-							<div
-								class="bg-[#0511F2] px-5 py-3 sm:mr-3 text-base font-medium text-white rounded-lg"
-							>
-								<h2>1. <span class="text-[#F2AE2E]"> Register</span></h2>
-								<p class="font-body text-xs">
-									Get 1000,- in credits when <br />
-									registering an account
-								</p>
-							</div>
-
-							<div
-								class="bg-[#0511F2] mt-2 sm:mt-0 px-5 py-3 sm:mr-3 text-base font-medium text-white rounded-lg"
-							>
-								<h2>2. <span class="text-[#F2AE2E]"> Find</span></h2>
-								<p class="font-body text-xs">
-									Search our libary for more <br />
-									than 100.330 items
-								</p>
-							</div>
-
-							<div
-								class="bg-[#0511F2] mt-2 sm:mt-0 px-5 py-3 sm:mr-3 text-base font-medium text-white rounded-lg"
-							>
-								<h2>3. <span class="text-[#F2AE2E]">Bid</span></h2>
-								<p class="font-body text-xs">
-									Bid on daily auto auctions <br />
-									Monday–Friday.
-								</p>
-							</div>
-						</div>
-						<a
-							href="/signup.html"
-							class="bg-[#F2AE2E] px-4 sm:min-w-4xl py-4 text-base font-medium text-center rounded-lg hover:bg-[#F1BB56]"
-						>
-							Register today to start bidding > >
-						</a>
-					</div>
-				</div>
-			</section> -->
 			<section class="dark:bg-gray-900 mt-16 sm:mt-[100px] sm:py-20 lg:py-0 z-10">
 				<div
 					class="grid max-w-screen-xl px-4 py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12"
@@ -437,190 +384,11 @@
 					</div>
 				</div>
 				<div id="listing">
-					<div
-						id="list-items"
-						class="px-10 py-10 grid grid-flow-col grid-cols-1 grid-rows-6 gap-5 lg:grid-cols-3 lg:grid-rows-2 max-w-screen-lg mx-auto z-0"
-					>
-						<a href="/detail.html">
-							<div
-								class="max-w-xs rounded-md shadow-lg hover:scale-105 transition duration-500 cursor-pointer z-0"
-							>
-								<div>
-									<img
-										src="https://media.ldlc.com/r1600/ld/products/00/05/82/02/LD0005820208_1.jpg"
-										alt=""
-									/>
-								</div>
-								<div class="py-4 px-4 bg-white">
-									<h3 class="text-lg font-semibold text-gray-600">
-										2020 BMW 3 SERIES
-									</h3>
-									<div class="flex">
-										<p class="mt-4 mr-3 text-lg font-thin">Current bid</p>
-										<p class="mt-4 text-lg text-green-500">$ 2400</p>
-									</div>
-									<div class="flex">
-										<p class="mt-4 mr-3 text-lg font-thin">Time remaining</p>
-										<p class="mt-4 text-lg text-red-700">4h 38m</p>
-									</div>
-									<div class="flex justify-center">
-										<button class="bg-black w-full my-3 hover:bg-[#A77619] rounded-md">
-											<p class="font-body text-white py-2">View listing</p>
-										</button>
-									</div>
-								</div>
-							</div>
-						</a>
-						<a href="/detail.html">
-							<div
-								class="max-w-xs rounded-md shadow-lg hover:scale-105 transition duration-500 cursor-pointer z-0"
-							>
-								<div>
-									<img
-										src="https://media.ldlc.com/r1600/ld/products/00/05/82/02/LD0005820208_1.jpg"
-										alt=""
-									/>
-								</div>
-								<div class="py-4 px-4 bg-white">
-									<h3 class="text-lg font-semibold text-gray-600">
-										2020 BMW 3 SERIES
-									</h3>
-									<div class="flex">
-										<p class="mt-4 mr-3 text-lg font-thin">Current bid</p>
-										<p class="mt-4 text-lg text-green-500">$ 2400</p>
-									</div>
-									<div class="flex">
-										<p class="mt-4 mr-3 text-lg font-thin">Time remaining</p>
-										<p class="mt-4 text-lg text-red-700">4h 38m</p>
-									</div>
-									<div class="flex justify-center">
-										<button class="bg-black w-full my-3 hover:bg-[#A77619] rounded-md">
-											<p class="font-body text-white py-2">View listing</p>
-										</button>
-									</div>
-								</div>
-							</div>
-						</a>
-						<a href="/detail.html">
-							<div
-								class="max-w-xs rounded-md shadow-lg hover:scale-105 transition duration-500 cursor-pointer z-0"
-							>
-								<div>
-									<img
-										src="https://media.ldlc.com/r1600/ld/products/00/05/82/02/LD0005820208_1.jpg"
-										alt=""
-									/>
-								</div>
-								<div class="py-4 px-4 bg-white">
-									<h3 class="text-lg font-semibold text-gray-600">
-										2020 BMW 3 SERIES
-									</h3>
-									<div class="flex">
-										<p class="mt-4 mr-3 text-lg font-thin">Current bid</p>
-										<p class="mt-4 text-lg text-green-500">$ 2400</p>
-									</div>
-									<div class="flex">
-										<p class="mt-4 mr-3 text-lg font-thin">Time remaining</p>
-										<p class="mt-4 text-lg text-red-700">4h 38m</p>
-									</div>
-									<div class="flex justify-center">
-										<button class="bg-black w-full my-3 hover:bg-[#A77619] rounded-md">
-											<p class="font-body text-white py-2">View listing</p>
-										</button>
-									</div>
-								</div>
-							</div>
-						</a>
-						<a href="/detail.html">
-							<div
-								class="max-w-xs rounded-md shadow-lg hover:scale-105 transition duration-500 cursor-pointer z-0"
-							>
-								<div>
-									<img
-										src="https://media.ldlc.com/r1600/ld/products/00/05/82/02/LD0005820208_1.jpg"
-										alt=""
-									/>
-								</div>
-								<div class="py-4 px-4 bg-white">
-									<h3 class="text-lg font-semibold text-gray-600">
-										2020 BMW 3 SERIES
-									</h3>
-									<div class="flex">
-										<p class="mt-4 mr-3 text-lg font-thin">Current bid</p>
-										<p class="mt-4 text-lg text-green-500">$ 2400</p>
-									</div>
-									<div class="flex">
-										<p class="mt-4 mr-3 text-lg font-thin">Time remaining</p>
-										<p class="mt-4 text-lg text-red-700">4h 38m</p>
-									</div>
-									<div class="flex justify-center">
-										<button class="bg-black w-full my-3 hover:bg-[#A77619] rounded-md">
-											<p class="font-body text-white py-2">View listing</p>
-										</button>
-									</div>
-								</div>
-							</div>
-						</a>
-						<a href="/detail.html">
-							<div
-								class="max-w-xs rounded-md shadow-lg hover:scale-105 transition duration-500 cursor-pointer z-0"
-							>
-								<div>
-									<img
-										src="https://media.ldlc.com/r1600/ld/products/00/05/82/02/LD0005820208_1.jpg"
-										alt=""
-									/>
-								</div>
-								<div class="py-4 px-4 bg-white">
-									<h3 class="text-lg font-semibold text-gray-600">
-										2020 BMW 3 SERIES
-									</h3>
-									<div class="flex">
-										<p class="mt-4 mr-3 text-lg font-thin">Current bid</p>
-										<p class="mt-4 text-lg text-green-500">$ 2400</p>
-									</div>
-									<div class="flex">
-										<p class="mt-4 mr-3 text-lg font-thin">Time remaining</p>
-										<p class="mt-4 text-lg text-red-700">4h 38m</p>
-									</div>
-									<div class="flex justify-center">
-										<button class="bg-black w-full my-3 hover:bg-[#A77619] rounded-md">
-											<p class="font-body text-white py-2">View listing</p>
-										</button>
-									</div>
-								</div>
-							</div>
-						</a>
-						<a href="/detail.html">
-							<div
-								class="max-w-xs rounded-md shadow-lg hover:scale-105 transition duration-500 cursor-pointer z-0"
-							>
-								<div>
-									<img
-										src="https://media.ldlc.com/r1600/ld/products/00/05/82/02/LD0005820208_1.jpg"
-										alt=""
-									/>
-								</div>
-								<div class="py-4 px-4 bg-white">
-									<h3 class="text-lg font-semibold text-gray-600">
-										2020 BMW 3 SERIES
-									</h3>
-									<div class="flex">
-										<p class="mt-4 mr-3 text-lg font-thin">Current bid</p>
-										<p class="mt-4 text-lg text-green-500">$ 2400</p>
-									</div>
-									<div class="flex">
-										<p class="mt-4 mr-3 text-lg font-thin">Time remaining</p>
-										<p class="mt-4 text-lg text-red-700">4h 38m</p>
-									</div>
-									<div class="flex justify-center">
-										<button class="bg-black w-full my-3 hover:bg-[#A77619] rounded-md">
-											<p class="font-body text-white py-2">View listing</p>
-										</button>
-									</div>
-								</div>
-							</div>
-						</a>	
+					<div id="list-items" class="px-10 py-10 grid md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-5 max-w-screen-xl mx-auto z-0">
+							<!-- flex flex-wrap lg:flex-auto-->
+					</div>
+					<div id="post_Message">
+
 					</div>
 				</div>
 			</section>
@@ -633,7 +401,7 @@
 			<div class="max-w-screen-lg mx-auto md:flex md:justify-between">
 				<div class="mb-6 md:mb-0">
 					<a href="/index.html" class="flex items-center">
-						<img src="/img/logoSmall.png" class="mr-3" alt="FlowBite Logo" />
+						<img src="/img/logoSmall.png" class="mr-3" alt="Logo" />
 					</a>
 				</div>
 				<div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-3">
