--- a/signin.html
+++ b/signin.html
@@ -18,7 +18,7 @@
 	</head>
 
 	<body class="dark:bg-[#050506]">
-		<script type="module" src="/main.js"></script>
+		<script type="module" src="./js/signIn.js"></script>
 		<header>
 			<nav
 				class="bg-gradient-to-b from-[#33333F] to-[#010101] fixed top-0 left-0 right-0 z-10"
@@ -46,23 +46,15 @@
 			</nav>
 		</header>
 		<main id="main">
-			<section
-				id="sign-in"
-				class="pt-20 sm:pt-0 pb-5 sm:pb-0"
-			>
-				<div
-					class="flex flex-col items-center justify-center px-6 pt-8 mx-auto md:h-screen lg:py-0"
-				>
-					<div
-						class="w-full rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700"
-					>
+			<section id="sign-in" class="pt-20 sm:pt-0 pb-5 sm:pb-0">
+				<div class="flex flex-col items-center justify-center px-6 pt-8 mx-auto md:h-screen lg:py-0">
+					<div class="w-full rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
 						<div class="p-6 space-y-4 md:space-y-6 sm:p-8">
-							<h1
-								class="text-xl font-h1 leading-tight tracking-tight md:text-2xl dark:text-white"
-							>
+							<h1 class="text-xl font-h1 leading-tight tracking-tight md:text-2xl dark:text-white">
 								Sing in to your account
 							</h1>
-							<form class="space-y-4 md:space-y-6" action="#">
+							<p id="general-error" class="text-2xl text-red capitalize"></p>
+							<form id="signIn-form" class="space-y-4 md:space-y-6">
 								<div class="email-input">
 									<label
 										for="email"
@@ -75,8 +67,14 @@
 										id="email"
 										class="bg-gray-50 font-body border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
 										placeholder="name@company.com"
-										required=""
 									/>
+									<span id="emailError" class="hidden font-body text-sm ml-2 text-red-700">
+										Please enter your email
+									</span>
+									<span id="emailNotValid" class="hidden font-body text-sm ml-2 text-red-700">
+										Email is not valid must be a valid stud.noroff.no or noroff.no
+										email address
+									</span>
 								</div>
 								<div class="password-input">
 									<label
@@ -90,23 +88,10 @@
 										id="password"
 										placeholder="••••••••"
 										class="bg-gray-50 font-body border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-										required=""
 									/>
-								</div>
-								<div class="passwordConfirm-input">
-									<label
-										for="confirm-password"
-										class="block mb-2 text-sm font-h2 text-gray-900 dark:text-white"
-										>Confirm password</label
-									>
-									<input
-										type="password"
-										name="confirm-password"
-										id="confirm-password"
-										placeholder="••••••••"
-										class="bg-gray-50 border font-body border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-										required=""
-									/>
+									<span id="passwordError" class="hidden font-body text-sm ml-2 text-red-700"> 
+										Please enter your password
+									</span>
 								</div>
 								<button
 									type="submit"
