--- a/signup.html
+++ b/signup.html
@@ -12,7 +12,7 @@
 		<title>Biddify | Sing up </title>
 	</head>
 	<body class="dark:bg-[#050506]">
-		<script type="module" src="/main.js"></script>
+		<script type="module" src="./js/signUp.js"></script>
 		<header>
 			<nav
 				class="bg-gradient-to-b from-[#33333F] to-[#010101] fixed top-0 left-0 right-0 z-10"
@@ -40,28 +40,23 @@
 			</nav>
 		</header>
 		<main>
-			<section
-				id="sign-in"
-				class="pt-20 sm:pt-10 pb-5 sm:pb-0"
-			>
-				<div
-					class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0"
-				>
-					<div
-						class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700"
-					>
+			<section id="sign-in" class="pt-20 sm:pt-10 pb-5 sm:pb-0">
+				<div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
+					<div class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
 						<div class="p-6 space-y-4 md:space-y-6 sm:p-8">
-							<h1
-								class="text-xl font-h1 leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white"
-							>
+							<h1 class="text-xl font-h1 leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
 								Create an account
 							</h1>
-							<form class="space-y-4 md:space-y-6" action="/index.html">
+							<p id="general-error" class="font-body text-sm ml-2 text-red-700"></p>
+							<form id="signup-form" class="space-y-4 md:space-y-6">
 								<div class="input-name">
 									<label for="name" class="block mb-2 text-sm font-h2 text-gray-900 dark:text-white">Your name</label>
 									<input type="text" name="name" id="name"
 										class="bg-gray-50 font-body border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-										placeholder="John" required="" />
+										placeholder="John" />
+									<span id="firstNameError" class="hidden font-body text-sm ml-2 text-red-700">
+										Enter your first name
+									</span>
 								</div>
 								<div class="input-email">
 									<label
@@ -77,6 +72,12 @@
 										placeholder="name@company.com"
 										required=""
 									/>
+									<span id="emailError" class="hidden font-body text-sm ml-2 text-red-700">
+										Please enter your email
+									</span>
+									<span id="emailError2" class="hidden font-body text-sm ml-2 text-red-700">
+										Please use stud.noroff.no or noroff.no email address
+									</span>
 								</div>
 								<div class="input-password">
 									<label
@@ -90,8 +91,10 @@
 										id="password"
 										placeholder="••••••••"
 										class="bg-gray-50 font-body border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-										required=""
 									/>
+									<span id="passwordError" class="hidden font-body text-sm ml-2 text-red-700">
+										Password must be over 3 characters
+									</span>
 								</div>
 								<div class="input-confirmPassword">
 									<label
@@ -105,8 +108,13 @@
 										id="confirm-password"
 										placeholder="••••••••"
 										class="bg-gray-50 font-body border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-										required=""
 									/>
+									<span id="confirmPasswordError" class="hidden font-body text-sm ml-2 text-red-700">
+										Please enter password
+									</span>
+									<span id="passwordDontNotMatch" class="hidden font-body text-sm ml-2 text-red-700">
+										Password doesn't match
+									</span>
 								</div>
 								<div class="Conditions flex items-start">
 									<div class="flex items-center h-5">
@@ -115,7 +123,6 @@
 											aria-describedby="terms"
 											type="checkbox"
 											class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800"
-											required=""
 										/>
 									</div>
 									<div class="ml-3 text-sm">
