--- a/index.html
+++ b/index.html
@@ -69,9 +69,7 @@
 								</svg>
 							</button>
 						</div>
-						<div
-							class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-between"
-						>
+						<div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-between">
 							<div class="flex flex-shrink-0 items-center">
 								<a href="/index.html">
 									<img
@@ -124,66 +122,65 @@
 									/>
 								</div>
 							</form>
-							<div
-								class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0"
-							>
-								<div class="flex">
-									<p class="text-white">100</p>
-									<p class="text-[#F2AE2E] font-medium">CR</p>
-								</div>
-								<!-- Profile dropdown -->
-								<div class="relative ml-3">
-									<div>
-										<button
-											type="button"
-											class="flex rounded-full bg-gray-800 text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800"
-											id="user-menu-button"
-											aria-expanded="false"
-											aria-haspopup="true"
-										>
-											<span class="sr-only">Open user menu</span>
-											<img
-												class="h-8 w-8 rounded-full"
-												src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
-												alt=""
-											/>
-										</button>
+							<div id="user-detailss" class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
+								 <div id="user-details" class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
+									<div class="flex">
+										<p id="credits" class="text-white">100</p>
+										<p class="text-[#F2AE2E] font-medium">CR</p>
+									</div>
+										<!-- Profile dropdown -->
+									<div class="relative ml-3">
+										<div class="flex">
+											<button id="user-menu-btn" type="button" class="inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:text-white" aria-haspopup="true" aria-expanded="false">
+											<!-- Icon when menu is closed. Menu open: "hidden", Menu closed: "block" -->
+												<span id="userAvatar" class="sr-only">Open user menu</span>
+													<img
+														
+														class="h-8 w-8 rounded-full"
+														src="/img/default-thumbnail.jpeg"
+														alt="Avatar"
+													/>
+													<!-- Icon when menu is open. Menu open: "block", Menu closed: "hidden"-->
+													<img
+														class="h-8 w-8 rounded-full hidden"
+														src="/img/default-thumbnail.jpeg"
+														alt="Avatar"
+														aria-hidden="true"
+													/>
+											</button>
+										</div>
 									</div>
 									<!-- Dropdown menu, show/hide based on menu state.-->
-									<div
-										id="settings-menu"
-										class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none"
-										role="menu"
-										aria-orientation="vertical"
-										aria-labelledby="user-menu-button"
-										tabindex="-1"
-									>
-										<a
-											href="/profile.html"
-											class="block px-4 py-2 text-sm text-gray-700"
-											role="menuitem"
-											tabindex="-1"
-											id="user-menu-item-0"
-											>Your Profile</a
-										>
-										<a
-											href="#"
-											class="block px-4 py-2 text-sm text-gray-700"
-											role="menuitem"
-											tabindex="-1"
-											id="user-menu-item-1"
-											>Settings</a
-										>
-										<a
-											href="#"
-											class="block px-4 py-2 text-sm text-gray-700"
-											role="menuitem"
-											tabindex="-1"
-											id="user-menu-item-2"
-											>Sign out</a
-										>
+									<div class="absolute bg-white ml-3 rounded-md mt-48 overflow-hidden z-10 py-1 shadow-lg origin-top-right focus:outline-none">
+										<div id="settings-menu" class="hidden right-0 mt-2 px-30 " role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
+											<a
+												href="/profile.html"
+												class="block px-8 py-2 text-sm text-gray-700"
+												role="menuitem"
+												tabindex="-1"
+												id="user-menu-item-0"
+												>Profile</a
+											>
+											<a
+												href="#"
+												class="block px-8 py-2 text-sm text-gray-700"
+												role="menuitem"
+												tabindex="-1"
+												id="user-menu-item-1"
+												>Settings</a
+											>
+											<a
+												href="#"
+												class="block px-8 py-2 text-sm text-gray-700"
+												role="menuitem"
+												tabindex="-1"
+												id="user-menu-item-2"
+												>Sign out</a
+											>
+										</div>
 									</div>
 								</div>
+							</div>
 							</div>
 						</div>
 					</div>
@@ -204,9 +201,9 @@
 							>
 
 							<a
-								href="#"
+								href="/addProduct.html"
 								class="text-gray-300 hover:text-medium hover:text-white block px-3 py-2 rounded-md text-base font-medium"
-								>Active Auctions</a
+								>Add listing</a
 							>
 
 							<a
@@ -252,7 +249,6 @@
 							</div>
 						</form>
 					</div>
-				</div>
 				<div class="hidden sm:pl-6 sm:block bg-[#A77619]">
 					<div class="flex space-x-4">
 						<a
@@ -269,9 +265,9 @@
 						>
 
 						<a
-							href="/listings.html"
+							href="/addProduct.html"
 							class="text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-medium"
-							>Active Auctions</a
+							>Add listing</a
 						>
 
 						<a
