updated endpoint to getPostId

--- a/profile.html
+++ b/profile.html
@@ -167,7 +167,7 @@
                                 method="POST"
                                 class="space-y-3"
                             >
-                            <div class="font-h1 flex justify-end text-darkGray m-1" id="exit-modal">X</div>
+                            <div class="font-h1 flex justify-end hover:cursor-pointer text-darkGray m-1 cursor-default" id="exit-modal">X</div>
                             <h1 class="font-h2 text-center text-[#F2AE2E]">Add a new Url to update your Avatar</h1>
                                 <div class="space-y-1">
                                     <label
