--- a/indexold.html
+++ b/indexold.html
@@ -182,3 +182,251 @@
 		</header>
 	</body>
 </html>
+
+
+<header id="header">
+			<nav
+				class="bg-gradient-to-b from-[#33333F] to-[#010101] fixed top-0 left-0 right-0 z-10"
+			>
+				<div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
+					<div class="relative flex h-16 items-center justify-between">
+						<div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
+							<!-- Mobile menu button-->
+							<button
+								id="mobile-menu-btn"
+								type="button"
+								class="inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:text-white"
+								aria-controls="mobile-menu"
+								aria-expanded="false"
+							>
+								<span class="sr-only">Open main menu</span>
+								<!-- Icon when menu is closed. Menu open: "hidden", Menu closed: "block" -->
+								<svg
+									class="block h-6 w-6"
+									xmlns="http://www.w3.org/2000/svg"
+									fill="none"
+									viewBox="0 0 24 24"
+									stroke-width="1.5"
+									stroke="currentColor"
+									aria-hidden="true"
+								>
+									<path
+										stroke-linecap="round"
+										stroke-linejoin="round"
+										d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
+									/>
+								</svg>
+								<!-- Icon when menu is open. Menu open: "block", Menu closed: "hidden"-->
+								<svg
+									class="hidden h-6 w-6"
+									xmlns="http://www.w3.org/2000/svg"
+									fill="none"
+									viewBox="0 0 24 24"
+									stroke-width="1.5"
+									stroke="currentColor"
+									aria-hidden="true"
+								>
+									<path
+										stroke-linecap="round"
+										stroke-linejoin="round"
+										d="M6 18L18 6M6 6l12 12"
+									/>
+								</svg>
+							</button>
+						</div>
+						<div
+							class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-between"
+						>
+							<div class="flex flex-shrink-0 items-center">
+								<a href="/index.html">
+									<img
+									class="block w-auto lg:hidden"
+									src="/img/logoSmall.png"
+									alt="Your Company"
+								/>
+								</a>
+								<a href="/index.html">
+									<img
+									class="hidden w-auto lg:block"
+									src="/img/logoSmall.png"
+									alt="Your Company"
+								/>
+								</a>
+							</div>
+							<!-- SEARCH -->
+							<form class="hidden sm:block">
+								<label
+									for="default-search"
+									class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-white"
+									>Search</label
+								>
+								<div class="relative">
+									<div
+										class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none"
+									>
+										<svg
+											aria-hidden="true"
+											class="w-5 h-5 text-gray-500 dark:text-gray-400"
+											fill="none"
+											stroke="currentColor"
+											viewBox="0 0 24 24"
+											xmlns="http://www.w3.org/2000/svg"
+										>
+											<path
+												stroke-linecap="round"
+												stroke-linejoin="round"
+												stroke-width="2"
+												d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
+											></path>
+										</svg>
+									</div>
+									<input
+										type="search"
+										id="default-search"
+										class="block w-full p-2 pl-10 text-sm rounded-lg bg-white"
+										placeholder="Search for item..."
+										required
+									/>
+								</div>
+							</form>
+							<div
+								class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0"
+							>
+								<div class="flex">
+									<p class="text-white">100</p>
+									<p class="text-[#F2AE2E] font-medium">CR</p>
+								</div>
+								<!-- Profile dropdown -->
+								<div class="relative ml-3">
+									<div>
+										<button
+											type="button"
+											class="flex rounded-full bg-gray-800 text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800"
+											id="user-menu-button"
+											aria-expanded="false"
+											aria-haspopup="true"
+										>
+											<span class="sr-only">Open user menu</span>
+											<img
+												class="h-8 w-8 rounded-full"
+												src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
+												alt=""
+											/>
+										</button>
+									</div>
+									<!-- Dropdown menu, show/hide based on menu state.-->
+									<div
+										id="settings-menu"
+										class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none"
+										role="menu"
+										aria-orientation="vertical"
+										aria-labelledby="user-menu-button"
+										tabindex="-1"
+									>
+										<a
+											href="/profile.html"
+											class="block px-4 py-2 text-sm text-gray-700"
+											role="menuitem"
+											tabindex="-1"
+											id="user-menu-item-0"
+											>Your Profile</a
+										>
+										<a
+											href="#"
+											class="block px-4 py-2 text-sm text-gray-700"
+											role="menuitem"
+											tabindex="-1"
+											id="user-menu-item-1"
+											>Settings</a
+										>
+										<a
+											href="#"
+											class="block px-4 py-2 text-sm text-gray-700"
+											role="menuitem"
+											tabindex="-1"
+											id="user-menu-item-2"
+											>Sign out</a
+										>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!-- Mobile menu, show/hide based on menu state. -->
+					<div class="sm:hidden" id="mobile-menu">
+						<div class="space-y-1 px-2 pt-2 pb-3">
+							<a
+								href="/index.html"
+								class="text-gray-300 font-body hover:text-medium hover:text-white block px-3 py-2 rounded-md text-base font-medium"
+								>Home</a
+							>
+							<a
+								href="/listings.html"
+								class="text-gray-300 font-body hover:text-medium hover:text-white block px-3 py-2 rounded-md text-base font-medium"
+								>Auctions</a
+							>
+							<a
+								href="/profile.html"
+								class="text-gray-300 font-body hover:text-medium hover:text-white block px-3 py-2 rounded-md text-base font-medium"
+								>Profile</a
+							>
+						</div>
+						<!-- SEARCH -->
+						<form class="pb-3">
+							<label
+								for="default-search"
+								class="mb-4 text-sm font-medium text-gray-900 sr-only dark:text-white"
+								>Search</label
+							>
+							<div class="relative sm:hidden">
+								<div
+									class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none"
+								>
+									<svg
+										aria-hidden="true"
+										class="w-5 h-5 text-gray-500 dark:text-gray-400"
+										fill="none"
+										stroke="currentColor"
+										viewBox="0 0 24 24"
+										xmlns="http://www.w3.org/2000/svg"
+									>
+										<path
+											stroke-linecap="round"
+											stroke-linejoin="round"
+											stroke-width="2"
+											d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
+										></path>
+									</svg>
+								</div>
+								<input
+									type="search"
+									id="default-search-mobile"
+									class="block w-full p-2 pl-10 text-sm rounded-lg bg-white"
+									placeholder="Search for item..."
+									required
+								/>
+							</div>
+						</form>
+					</div>
+				</div>
+				<div class="hidden sm:pl-6 sm:block  bg-[#A77619]">
+					<div class="flex space-x-4 mx-auto max-w-7xl">
+						<a
+							href="/index.html"
+							class="text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-body"
+							>Home</a
+						>
+						<a
+							href="/listings.html"
+							class="text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-body"
+							>Auctions</a
+						>
+						<a
+							href="/profile.html"
+							class="text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-body"
+							>Profile</a
+						>
+					</div>
+				</div>
+			</nav>
+		</header>
