fix styling and bug

--- a/profile.html
+++ b/profile.html
@@ -192,74 +192,12 @@
 							</div>
 						</div>
 					</div>
-					<div id="active-listings" class="overflow-hidden lg:flex h-0" style="height: auto; justify-content: center; transition: height var(--f-expansion-duration, 0.3s); backface-visibility: hidden;">
+					<div id="active-listings" class="overflow-hidden lg:flex lg:flex-wrap h-0" style="height: auto; justify-content: center; transition: height var(--f-expansion-duration, 0.3s); backface-visibility: hidden;">
 						
 					</div>
 					<div id="genreral-error"></div>
 				</div>
-				<!-- <div id="sold-listings2" class="w-full">
-					<div id="active-listings2">
-						<div class="flex bg-gradient-to-b from-[#33333F] to-[#010101] cursor-pointer text-left relative p-10">	
-							<p class="text-[#F2AE2E] font-h2" style="font-weight: 300;">SOLD LISTINGS</p>
-							<div class="self-center transform transition-transform -rotate-180  box-chevron">
-								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" viewBox="0 0 16 16">
-									<path stroke="#F2AE2E" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M2.5 5.5L8 11l5.5-5.5"></path>
-								</svg>
-							</div>
-						</div>
-					</div>
-					<div id="subtext2" class="overflow-hidden h-0" style="height: auto; justify-content: center; transition: height var(--f-expansion-duration, 0.3s); backface-visibility: hidden;">
-						<div class=" group pt-0">
-							<div id="list-items2" class="p-8 max-w-screen-lg mx-auto z-0 flex flex-wrap md:justify-center md:p-2">	
-								<a href="/detail.html" class="p-5 md:p-2">
-									<div class="max-w-xs rounded-md shadow-lg hover:scale-105 transition duration-500 cursor-pointer">
-										<div>
-											<img
-												src="https://media.ldlc.com/r1600/ld/products/00/05/82/02/LD0005820208_1.jpg"
-												alt=""
-											/>
-										</div>
-										<div class="py-4 px-4 bg-white">
-											<h2 class="text-lg font-semibold text-gray-600">
-												2020 BMW 3 SERIES
-											</h2>
-										</div>
-									</div>
-								</a>
-								<a href="/detail.html" class="p-5 md:p-2">
-									<div class="max-w-xs rounded-md shadow-lg hover:scale-105 transition duration-500 cursor-pointer">
-										<div>
-											<img
-												src="https://media.ldlc.com/r1600/ld/products/00/05/82/02/LD0005820208_1.jpg"
-												alt=""
-											/>
-										</div>
-										<div class="py-4 px-4 bg-white">
-											<h2 class="text-lg font-semibold text-gray-600">
-												2020 BMW 3 SERIES
-											</h2>
-										</div>
-									</div>
-								</a>
-								<a href="/detail.html" class="p-5 md:p-2">
-									<div class="max-w-xs rounded-md shadow-lg hover:scale-105 transition duration-500 cursor-pointer">
-										<div>
-											<img
-												src="https://media.ldlc.com/r1600/ld/products/00/05/82/02/LD0005820208_1.jpg"
-												alt=""
-											/>
-										</div>
-										<div class="py-4 px-4 bg-white">
-											<h2 class="text-lg font-semibold text-gray-600">
-												2020 BMW 3 SERIES
-											</h2>
-										</div>
-									</div>
-								</a>
-							</div>
-						</div>
-					</div>
-				</div> -->
+				
 			</div>	
 		</main>
 		<footer class="p-4 sm:p-6" style="background-image: url(/img/footer.png)">
