--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	</head>
 	<body class="bg-[#E3E4EF]">
 		<script type="module" src='/main.js'></script>
-		<script type="module" src='/js/getPost.js'></script>
+		<script type="module" src='/js/getPostHomepage.js'></script>
 		<header id="header">
 			<nav class="bg-gradient-to-b from-[#33333F] to-[#010101] fixed top-0 left-0 right-0 z-10">
 				<div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
@@ -67,7 +67,7 @@
 									<!-- Profile dropdown -->
 									<div class="relative ml-3">
 										<div class="flex">
-											<button id="user-menu-btn" type="button" class="inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:text-white" aria-controls="user-menu-btn" aria-haspopup="true" aria-expanded="false">
+											<button id="user-menu-btn" type="button" class="max-h-8 max-w-8 inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:text-white" aria-controls="user-menu-btn" aria-haspopup="true" aria-expanded="false">
 											
 											</button>
 										</div>
@@ -110,7 +110,7 @@
 			</nav>
 		</header>
 		<main>
-			<section class="dark:bg-gray-900 mt-16 sm:mt-[100px] sm:py-20 lg:py-0 z-10">
+			<section class="dark:bg-gray-900 mt-16 sm:mt-[98x] sm:py-20 lg:py-0 z-10">
 				<div class="grid max-w-screen-xl px-4 py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12">
 					<div class="mr-auto place-self-center lg:col-span-7">
 						<h1 class="max-w-2xl mb-4 text-4xl font-h1 tracking-tight leading-none md:text-5xl xl:text-6xl dark:text-white">
@@ -206,7 +206,7 @@
 					</div>
 				</div>
 				<div id="listing">
-					<div id="list-items" class="overflow-auto max-h-[56rem] px-10 py-10 grid md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-5 max-w-screen-xl mx-auto z-0 ">
+					<div id="list-items" class=" px-10 py-10 grid md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-5 max-w-screen-xl mx-auto z-0 ">
 							<!-- flex flex-wrap lg:flex-auto-->
 					</div>
 					<div id="post_Message">
