fix validation and error, and update to local

--- a/signin.html
+++ b/signin.html
@@ -53,7 +53,7 @@
 							<h1 class="text-xl font-h1 leading-tight tracking-tight md:text-2xl dark:text-white">
 								Sing in to your account
 							</h1>
-							<p id="general-error" class="text-2xl text-red capitalize"></p>
+							<p id="general-error" class="text-xl text-red-800 capitalize"></p>
 							<form id="signIn-form" class="space-y-4 md:space-y-6">
 								<div class="email-input">
 									<label
