--- a/signup.html
+++ b/signup.html
@@ -22,18 +22,20 @@
 						<div
 							class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-between"
 						>
-							<div class="flex flex-shrink-0 items-center">
+							<a href="/index.html">
 								<img
 									class="block w-auto lg:hidden"
 									src="/img/logoSmall.png"
 									alt="Your Company"
 								/>
+							</a>
+							<a href="/index.html">
 								<img
 									class="hidden w-auto lg:block"
 									src="/img/logoSmall.png"
 									alt="Your Company"
 								/>
-							</div>
+							</a>
 						</div>
 					</div>
 				</div>
@@ -47,7 +49,7 @@
 							<h1 class="text-xl font-h1 leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
 								Create an account
 							</h1>
-							<p id="general-error" class="font-body text-sm ml-2 text-red-700"></p>
+							<p id="general-error" class="text-xl text-red-800 capitalize"></p>
 							<form id="signup-form" class="space-y-4 md:space-y-6">
 								<div class="input-name">
 									<label for="name" class="block mb-2 text-sm font-h2 text-gray-900 dark:text-white">Your name</label>
@@ -70,7 +72,6 @@
 										id="email"
 										class="bg-gray-50 font-body border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
 										placeholder="name@company.com"
-										required=""
 									/>
 									<span id="emailError" class="hidden font-body text-sm ml-2 text-red-700">
 										Please enter your email
